<resources>
    <string name="app_name">Tracking Coronavirus COVID-19</string>
    <string name="cases">Coronavirus Cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="active_cases">Active Cases</string>
    <string name="app_id">ca-app-pub-6501763361108608~7046712081</string>
    <string name="test_banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad">ca-app-pub-6501763361108608/1958036938</string>
</resources>
